// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration filter 1`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration filter 2`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
]
`;

exports[`Integration filter 3`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from where 1`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from where 2`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
]
`;

exports[`Integration select from where 3`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 1`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 2`] = `
{
  "age": 10,
  "id": RecordId {
    "table": "user",
    "value": "bob",
  },
  "name": "Bob",
}
`;

exports[`Integration select from where 4`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from where 5`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
]
`;

exports[`Integration select from where 6`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 3`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 4`] = `
{
  "age": 10,
  "id": RecordId {
    "table": "user",
    "value": "bob",
  },
  "name": "Bob",
}
`;

exports[`Integration select from where 7`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from where 8`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
]
`;

exports[`Integration select from where 9`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 5`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 6`] = `
{
  "age": 10,
  "id": RecordId {
    "table": "user",
    "value": "bob",
  },
  "name": "Bob",
}
`;

exports[`Integration select from where 10`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from where 11`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
]
`;

exports[`Integration select from where 12`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 7`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 8`] = `
{
  "age": 10,
  "id": RecordId {
    "table": "user",
    "value": "bob",
  },
  "name": "Bob",
}
`;

exports[`Integration select from where 13`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from where 14`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
]
`;

exports[`Integration select from where 15`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 9`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 10`] = `
{
  "age": 10,
  "id": RecordId {
    "table": "user",
    "value": "bob",
  },
  "name": "Bob",
}
`;

exports[`Integration select from where 16`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from where 17`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
]
`;

exports[`Integration select from where 18`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 11`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 12`] = `
{
  "age": 10,
  "id": RecordId {
    "table": "user",
    "value": "bob",
  },
  "name": "Bob",
}
`;

exports[`Integration select from where 19`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from where 20`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
]
`;

exports[`Integration select from where 21`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 13`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 14`] = `
{
  "age": 10,
  "id": RecordId {
    "table": "user",
    "value": "bob",
  },
  "name": "Bob",
}
`;

exports[`Integration select from where 22`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from where 23`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
]
`;

exports[`Integration select from where 24`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 15`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 16`] = `
{
  "age": 10,
  "id": RecordId {
    "table": "user",
    "value": "bob",
  },
  "name": "Bob",
}
`;

exports[`Integration select from where 25`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from where 26`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
]
`;

exports[`Integration select from where 27`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 17`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration select from only 18`] = `
{
  "age": 10,
  "id": RecordId {
    "table": "user",
    "value": "bob",
  },
  "name": "Bob",
}
`;
